# internal/model/wrapper_model.go
@@ -11,3 +11,11 @@ type ChannelsResponseWrapper struct {
 type ErrorWrapper struct {
 	WebResponse[any]
 }
+
+type MethodResponseWrapper struct {
+	WebResponse[MethodResponse]
+}
+
+type MethodsResponseWrapper struct {
+	WebResponse[[]MethodResponse]
+}
